BAH-4496 | Fix. alignment of main-display-area for BaseLayout

--- a/packages/bahmni-design-system/src/templates/baseLayout/styles/index.module.scss
+++ b/packages/bahmni-design-system/src/templates/baseLayout/styles/index.module.scss
@@ -16,6 +16,7 @@
   overflow-y: visible;
   width: 100%;
   height: 100%;
+  align-self: center;
 }
 
 @include breakpoint-down(lg) {
